--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,12 @@
         <meta-data
             android:name="com.facebook.sdk.ApplicationId"
             android:value="@string/app_id"/>
-        <activity android:name=".MainActivity">
+
+        <activity
+            android:name=".MainActivity"
+
+
+            >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
