--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,15 +25,17 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
 
+
+
+
     compile 'com.android.support:appcompat-v7:25.0.0'
     compile 'com.android.support:design:23.4.0'
     compile 'de.hdodenhof:circleimageview:2.1.0'
     compile 'com.facebook.android:facebook-android-sdk:4.+'
-
-    testCompile 'junit:junit:4.12'
     compile 'com.android.support.constraint:constraint-layout:1.0.0-beta3'
-
-
+    compile 'com.android.support:recyclerview-v7:25.0.0'
+    testCompile 'junit:junit:4.12'
 }
+
 
 apply plugin: 'com.google.gms.google-services'
