--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,7 +33,7 @@ dependencies {
     compile 'de.hdodenhof:circleimageview:2.1.0'
     compile 'com.facebook.android:facebook-android-sdk:4.+'
     compile 'com.android.support.constraint:constraint-layout:1.0.0-beta3'
-    compile 'com.android.support:recyclerview-v7:25.0.0'
+    compile 'com.android.support:recyclerview-v7:23.+'
     testCompile 'junit:junit:4.12'
 }
 
