update หน้า home

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,7 @@ dependencies {
     compile 'com.facebook.android:facebook-android-sdk:4.+'
     compile 'com.android.support.constraint:constraint-layout:1.0.0-beta3'
     compile 'com.android.support:recyclerview-v7:23.+'
+    compile 'pl.pawelkleczkowski.customgauge:CustomGauge:1.0.3'
     testCompile 'junit:junit:4.12'
 }
 
