--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,27 +12,32 @@
         android:theme="@style/AppTheme">
         <meta-data
             android:name="com.facebook.sdk.ApplicationId"
-            android:value="@string/app_id"/>
+            android:value="@string/app_id" />
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="AIzaSyDfsKe2JOoYoKLQCbNsbC0aTsIT8nHMjoU" />
 
-        <activity
-            android:name=".MainActivity">
+        <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".HomeActivity" android:theme="@style/AppTheme.NoActionBar"> </activity>
-        <activity android:name=".HistoryActivity" android:theme="@style/AppTheme.NoActionBar"
-
+        <activity
+            android:name=".HomeActivity"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
+        <activity
+            android:name=".HistoryActivity"
             android:parentActivityName=".HistoryActivity"
-            ></activity>
+            android:theme="@style/AppTheme.NoActionBar"></activity>
         <activity android:name=".SignUpActivity"></activity>
-        
+        <activity
+            android:name=".HelpActivity"
+            android:parentActivityName=".HelpActivity"
+            android:theme="@style/AppTheme.NoActionBar2"></activity>
+
 
     </application>
 
