--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,6 +38,11 @@
             android:parentActivityName=".HelpActivity"
             android:theme="@style/AppTheme.NoActionBar2"></activity>
 
+        <activity
+            android:name=".SettingActivity"
+            android:parentActivityName=".SettingActivity"
+            android:theme="@style/AppTheme.NoActionBar2"></activity>
+
 
     </application>
 
