--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,7 @@ dependencies {
     compile 'com.android.support.constraint:constraint-layout:1.0.0-beta3'
     compile 'com.android.support:recyclerview-v7:23.+'
     compile 'pl.pawelkleczkowski.customgauge:CustomGauge:1.0.3'
+    compile 'com.google.firebase:firebase-database:9.8.0'
     testCompile 'junit:junit:4.12'
 }
 
