Update about aqi Activity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -43,6 +43,7 @@
             android:parentActivityName=".SettingActivity"
             android:theme="@style/AppTheme.Menu"></activity>
 
+        <activity android:name=".GraphGasActivity"></activity>
 
     </application>
 
