--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,7 +38,7 @@ dependencies {
     compile 'pl.pawelkleczkowski.customgauge:CustomGauge:1.0.3'
     compile 'com.google.firebase:firebase-database:9.8.0'
     compile 'com.jjoe64:graphview:4.2.1'
-    compile 'me.majiajie:pager-bottom-tab-strip:1.0.0'
+    compile 'com.getbase:floatingactionbutton:1.10.1'
     testCompile 'junit:junit:4.12'
 }
 
