--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,6 +39,7 @@ dependencies {
     compile 'com.google.firebase:firebase-database:9.8.0'
     compile 'com.jjoe64:graphview:4.2.1'
     compile 'com.getbase:floatingactionbutton:1.10.1'
+    compile 'it.neokree:MaterialNavigationDrawer:1.3.3'
     testCompile 'junit:junit:4.12'
 }
 
