--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,13 +28,13 @@ dependencies {
 
 
 
-    compile 'com.android.support:appcompat-v7:25.0.0'
-    compile 'com.android.support:design:23.4.0'
+    compile 'com.android.support:appcompat-v7:25.1.0'
+    compile 'com.android.support:design:25.0.0'
     compile 'com.google.firebase:firebase-auth:9.8.0'
     compile 'de.hdodenhof:circleimageview:2.1.0'
     compile 'com.facebook.android:facebook-android-sdk:4.+'
     compile 'com.android.support.constraint:constraint-layout:1.0.0-beta3'
-    compile 'com.android.support:recyclerview-v7:23.+'
+    compile 'com.android.support:recyclerview-v7:25'
     compile 'pl.pawelkleczkowski.customgauge:CustomGauge:1.0.3'
     compile 'com.google.firebase:firebase-database:9.8.0'
     compile 'com.jjoe64:graphview:4.2.1'
