--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,18 +28,17 @@ dependencies {
 
 
 
-    compile 'com.android.support:appcompat-v7:25.1.0'
-    compile 'com.android.support:design:25.0.0'
-    compile 'com.google.firebase:firebase-auth:9.8.0'
-    compile 'de.hdodenhof:circleimageview:2.1.0'
-    compile 'com.facebook.android:facebook-android-sdk:4.+'
+    compile 'com.android.support:appcompat-v7:23.1.0'
     compile 'com.android.support.constraint:constraint-layout:1.0.0-beta3'
-    compile 'com.android.support:recyclerview-v7:25'
+    compile 'com.android.support:support-v4:23.2.1'
+    compile 'devlight.io:navigationtabbar:1.2.5'
+    compile 'com.android.support:design:23.2.1'
+    compile 'de.hdodenhof:circleimageview:2.1.0'
     compile 'pl.pawelkleczkowski.customgauge:CustomGauge:1.0.3'
-    compile 'com.google.firebase:firebase-database:9.8.0'
     compile 'com.jjoe64:graphview:4.2.1'
-    compile 'com.getbase:floatingactionbutton:1.10.1'
-    compile 'it.neokree:MaterialNavigationDrawer:1.3.3'
+
+    // compile 'it.neokree:MaterialNavigationDrawer:1.3.3'
+
     testCompile 'junit:junit:4.12'
 }
 
