--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 25
-    buildToolsVersion "25.0.0"
+    buildToolsVersion "25.0.2"
     defaultConfig {
         applicationId "com.admin.gitframeapacas"
         minSdkVersion 23
@@ -36,6 +36,12 @@ dependencies {
     compile 'de.hdodenhof:circleimageview:2.1.0'
     compile 'pl.pawelkleczkowski.customgauge:CustomGauge:1.0.3'
     compile 'com.jjoe64:graphview:4.2.1'
+
+
+    compile 'com.google.android.gms:play-services-maps:10.0.1'
+    compile 'com.squareup.okhttp3:okhttp:3.5.0'
+    compile 'com.google.code.gson:gson:2.2.4'
+    compile 'com.github.arimorty:floatingsearchview:2.0.3'
 
     // compile 'it.neokree:MaterialNavigationDrawer:1.3.3'
 
