--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.admin.gitframeapacas">
 
+
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.INTERNET"></uses-permission>
 
     <application
         android:allowBackup="true"
@@ -10,9 +12,10 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="AIzaSyDvy9_5pebNnaWe9Eywm0Ygb6Efmo1LZew" />
+            android:value="AIzaSyDyf1RJGMhVWBLrV-L3dQkbMjt2C2aqxLQ" />
 
         <meta-data
             android:name="com.facebook.sdk.ApplicationId"
@@ -44,8 +47,18 @@
             android:parentActivityName=".SettingActivity"
             android:theme="@style/AppTheme.Menu"></activity>
 
+        <activity
+            android:name=".DistrictActivity"
+            android:parentActivityName=".DistrictActivity"
+            android:theme="@style/AppTheme.Menu"></activity>
+
+        <activity
+            android:name=".ProfileActivity"
+            android:parentActivityName=".ProfileActivity"
+            android:theme="@style/AppTheme.Menu"></activity>
+
         <activity android:name=".GraphGasActivity"></activity>
-        <activity android:name=".TestActivity"></activity>
+
     </application>
 
 </manifest>
