--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,20 +30,17 @@ dependencies {
 
     compile 'com.android.support:appcompat-v7:23.1.0'
     compile 'com.android.support.constraint:constraint-layout:1.0.0-beta3'
-    compile 'com.android.support:support-v4:23.2.1'
     compile 'devlight.io:navigationtabbar:1.2.5'
-    compile 'com.android.support:design:23.2.1'
     compile 'de.hdodenhof:circleimageview:2.1.0'
     compile 'pl.pawelkleczkowski.customgauge:CustomGauge:1.0.3'
     compile 'com.jjoe64:graphview:4.2.1'
-
-
     compile 'com.google.android.gms:play-services-maps:10.0.1'
     compile 'com.squareup.okhttp3:okhttp:3.5.0'
     compile 'com.google.code.gson:gson:2.2.4'
     compile 'com.github.arimorty:floatingsearchview:2.0.3'
+    compile 'com.lzp.floatingactionbutton:floatingactionbuttonplus:1.0.0'
 
-    // compile 'it.neokree:MaterialNavigationDrawer:1.3.3'
+
 
     testCompile 'junit:junit:4.12'
 }
