--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,7 +40,7 @@ dependencies {
     compile 'com.lzp.floatingactionbutton:floatingactionbuttonplus:1.0.0'
     compile 'com.github.blackfizz:eazegraph:1.2.2@aar'
     compile 'com.nineoldandroids:library:2.4.0'
-
+    compile 'pl.pawelkleczkowski.customgauge:CustomGauge:1.0.3'
 
 
     testCompile 'junit:junit:4.12'
