--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,8 +41,11 @@ dependencies {
     compile 'com.github.blackfizz:eazegraph:1.2.2@aar'
     compile 'com.nineoldandroids:library:2.4.0'
     compile 'pl.pawelkleczkowski.customgauge:CustomGauge:1.0.3'
-
+    compile group: 'net.sf.xenqtt', name: 'xenqtt', version: '0.9.5'
     //compile 'com.google.firebase:firebase-auth:10.0.1'
+    compile('org.eclipse.paho:org.eclipse.paho.android.service:1.0.2') {
+        exclude module: 'support-v4'
+    }
     testCompile 'junit:junit:4.12'
 }
 
