--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,9 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.admin.gitframeapacas">
 
-
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"></uses-permission>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+
     <uses-permission android:name="android.permission.BLUETOOTH" />
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
 
@@ -82,6 +83,8 @@
         <service
             android:name=".Service.GetGasService"
             android:process=":my_service" />
+
+        <service android:name=".Service.GoogleService" />
 
         <activity android:name=".Bluetooth.DeviceScanActivity" />
         <activity android:name=".Bluetooth.DeviceControlActivity" />
