--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,8 +48,10 @@ dependencies {
     compile 'pl.pawelkleczkowski.customgauge:CustomGauge:1.0.3'
     compile group: 'net.sf.xenqtt', name: 'xenqtt', version: '0.9.5'
     //compile 'com.google.firebase:firebase-auth:10.0.1'
+    compile 'com.github.brnunes:swipeablerecyclerview:1.0.2'
+    compile 'com.android.support:cardview-v7:23.1.1'
 
-
+    compile 'com.android.support:recyclerview-v7:23.1.1'
     compile('org.eclipse.paho:org.eclipse.paho.android.service:1.0.2') {
 
         exclude module: 'support-v4'
