--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,10 +52,12 @@ dependencies {
     compile 'com.android.support:cardview-v7:23.1.1'
 
     compile 'com.android.support:recyclerview-v7:23.1.1'
+    compile 'com.google.android.gms:play-services:10.0.1'
     compile('org.eclipse.paho:org.eclipse.paho.android.service:1.0.2') {
 
         exclude module: 'support-v4'
     }
+
     testCompile 'junit:junit:4.12'
 }
 
